# MexIFace-Example

./: CMakeLists.txt  README.md  build.debug.sh  build.sh
cmake/Templates/: PackageConfig.cmake.in
cmake/UncommonCMakeModules/: .gitrepo
doc/: Doxyfile.in
include/ArmadilloExample/: ArmadilloExample.h
include/MexIFaceExample/: CholeskySolver.h
include/MexIFaceExample/OMPExceptionCatcher/: .gitrepo
src/: ArmadilloExample.cpp  CMakeLists.txt
src/MexIFace/: ArmadilloExampleIFace.cpp  CMakeLists.txt
test/: CMakeLists.txt  testCholeskySolver.cpp
